# seed-todo-app

./: Cargo.toml  Makefile.toml  README.md  package.json  tailwind.config.js
css/: fonts.css  styles.css
src/: lib.rs
static/: index.hbs
static/templates/: favicons.hbs  social_media.hbs
