[package]
version = "0.1.0"
name = "seed-todo-app"
repository = "https://github.com/olivermd/seed-todo-app"
authors = ["Oliver Downard <olivermd@btinternet.com>"]
description = "Todo app written using Seed"
categories = ["wasm", "rust", "tailwindcss", "seed", "todo", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
fixed-vec-deque = "0.1.9"
ulid = "0.4.1"

[dependencies.web-sys]
version = "0.3.45"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
